@@ -100,7 +100,7 @@ class CircusParser(object):
                           ['detection', 'N_t', 'string', '3'],
                           ['detection', 'isolation', 'bool', 'True'],
                           ['detection', 'dead_channels', 'string', ''],
-                          ['detection', 'spike_width', 'float', '0'],
+                          ['detection', 'spike_width', 'float', '0.1'],
                           ['triggers', 'clean_artefact', 'bool', 'False'],
                           ['triggers', 'make_plots', 'string', ''],
                           ['triggers', 'trig_file', 'string', ''],
@@ -183,7 +183,7 @@ class CircusParser(object):
                         ['clustering', 'savgol', 'bool', 'True'],
                         ['detection', 'jitter_range', 'float', '0.1'],
                         ['detection', 'smoothing', 'bool', 'True'],
-                        ['detection', 'smoothing_factor', 'float', '0.25'],
+                        ['detection', 'smoothing_factor', 'float', '1'],
                         ['data', 'memory_usage', 'float', '0.1'],
                         ['clustering', 'safety_time', 'string', 'auto'],
                         ['whitening', 'safety_time', 'string', 'auto'],
