@@ -294,7 +294,7 @@ def main(params, nb_cpu, nb_gpu, use_gpu):
     output_dim       = params.getfloat('whitening', 'output_dim')
     inv_nodes        = numpy.zeros(N_total, dtype=numpy.int32)
     inv_nodes[nodes] = numpy.arange(len(nodes))
-    smoothing_factor = params.getfloat('detection', 'smoothing_factor')
+    smoothing_factor = params.getfloat('detection', 'smoothing_factor') * (1./spike_thresh)**2
     if sign_peaks == 'both':
        max_elts_elec *= 2
     nb_elts          = int(params.getfloat('whitening', 'nb_elts')*N_e*max_elts_elec)
@@ -460,7 +460,7 @@ def main(params, nb_cpu, nb_gpu, use_gpu):
                                 ydata    = local_chunk[peak - template_shift_2:peak + template_shift_2 + 1, elec]
 
                                 if smoothing:
-                                    factor = smoothing_factor*xdata.size * mads[elec]**2
+                                    factor = smoothing_factor*xdata.size
                                     f = scipy.interpolate.UnivariateSpline(xdata, ydata, s=factor, k=3)
                                 else:
                                     f = scipy.interpolate.UnivariateSpline(xdata, ydata, k=3, s=0)
