@@ -3,6 +3,7 @@ Release 0.8.6
 =============
 
 * new methods to detect the peaks, more robust when low thresholds are fixed
+* all channels are now normalized before whitening and clustering
 
 =============
 Release 0.8.5
